# rust_os

./: .gitattributes  .gitignore  Cargo.toml  Factory.toml  LICENSE  README.md  SysCalls.md  TODO.md  Vagrantfile  autobuild.sh  bochs_config  build.rs  build.sh  d7os.json  devel_troubleshooting.md  header_breakdown.txt  header_breakdown_old.txt  memory_layout.md  mmap.txt  plan.md  rust_os.json  rustfmt.toml
.github/workflows/: ci.yml
build_config/: config.py  configure.py  initrd_files.txt  linker.ld  ninja_syntax.py  staticfs_files.txt  validate_build.py
build_config/constants/: 0_misc.toml  1_boot.toml  1_process.toml  _options.toml
build_config/files/: keycode.json  keycodes.json  keymap.json  pci_devices.json  startup_services.json
buildsystem/: build.conf  linker.ld
dbgenv_config/: bochs_base  bochs_debug  bochs_net  bochs_normal  slirp.conf
docs/: SysCalls.md  TODO.md  building-bochs.md  capabilities.md  devel_troubleshooting.md  plan.md  sockets.md  spells.md  timekeeping.md
libs/d7abi/: Cargo.toml  README.md  d7abi.json  linker.ld
libs/d7abi/src/: allocator.rs  fs.rs  kernel_constants.rs  lib.rs  process.rs  processor_info.rs  syscall.rs
libs/d7abi/src/fs/: mod.rs  protocol.rs
libs/d7abi/src/fs/protocol/: attachment.rs  console.rs  mod.rs  network.rs
libs/d7abi/src/ipc/: mod.rs
libs/d7abi/src/ipc/protocol/: keyboard.rs  mod.rs  service.rs
libs/d7abi/src/syscall/: mod.rs  types.rs
libs/d7alloc/: Cargo.toml
libs/d7boot/: Cargo.toml  linker.ld
libs/d7boot/src/: ata_pio.rs  entry.asm  lib.rs  symtree.rs
libs/d7elfpack/: Cargo.toml  README.md  rustfmt.toml
libs/d7elfpack/src/: huffman.rs  lib.rs  main.rs  rle.rs
libs/d7initrd/: Cargo.toml  README.md
libs/d7initrd/src/: lib.rs
libs/d7keymap/: Cargo.toml  generate.py
libs/d7keymap/examples/: keycodes.json  keymap.json
libs/d7keymap/src/: lib.rs
libs/d7net/: Cargo.toml  README.md
libs/d7net/src/: arp.rs  checksum.rs  dhcp.rs  dns.rs  ethernet.rs  ethertype.rs  ip_addr.rs  ip_protocol.rs  ipv4.rs  ipv6.rs  ipv_either.rs  lib.rs  mac.rs  udp.rs
libs/d7net/src/builder/: ipv4_tcp.rs  ipv4_udp.rs  mod.rs
libs/d7net/src/tcp/: mod.rs  segment.rs
libs/d7net/tests/: arp_simple.rs  dns.rs
libs/d7pci/: Cargo.toml  README.md
libs/d7protocol/: Cargo.toml  README.md
libs/d7protocol/src/: lib.rs
libs/d7ramfs/: Cargo.toml
libs/d7staticfs/: Cargo.toml  README.md
libs/d7time/: Cargo.toml  README.md
libs/elf2bin/: Cargo.toml  README.md  rustfmt.toml
libs/libd7/: Cargo.toml  README.md
libs/libd7/src/: allocator.rs  attachment.rs  console.rs  env.rs  fs.rs  lib.rs  prelude.rs  process.rs  random.rs  select.rs  service.rs  syscall.rs  time.rs
libs/libd7/src/ipc/: mod.rs  select.rs  send.rs  server.rs  subscription.rs
libs/libd7/src/net/: mod.rs  socket.rs  tcp.rs  udp.rs
libs/libd7/src/net/tcp/: mod.rs  socket_ipc_protocol.rs
libs/qemu_driver/: Cargo.toml
modules/daemon_console/: Cargo.toml
modules/daemon_console/src/: keyboard.rs  lib.rs  vga.rs  virtual_console.rs
modules/daemon_fatfs/: Cargo.toml
modules/daemon_fatfs/src/: cache.rs  cursor.rs  disk.rs  lib.rs
modules/daemon_net/: Cargo.toml  README.md
modules/daemon_net/src/: arp_cache.rs  arp_handler.rs  dhcp_client.rs  dns_resolver.rs  interface.rs  lib.rs  my_info.rs  ports.rs  send.rs  tcp_handler.rs
modules/daemon_net/src/handler/: arp.rs  ipv4.rs  mod.rs
modules/daemon_net/src/socket/: mod.rs  tcp.rs
modules/daemon_service/: Cargo.toml  README.md
modules/daemon_service/src/: lib.rs
modules/daemon_syslog/: Cargo.toml
modules/daemon_syslog/src/: lib.rs
modules/daemon_vfs/: Cargo.toml  README.md
modules/driver_ata_pio/: Cargo.toml
modules/driver_ata_pio/src/: ata_pio.rs  lib.rs
modules/driver_ne2k/: Cargo.toml
modules/driver_pci/: Cargo.toml  README.md
modules/driver_pci/src/: lib.rs
modules/driver_ps2/: Cargo.toml
modules/driver_ps2/src/: keyboard.rs  lib.rs  state.rs
modules/driver_rtc/: Cargo.toml
modules/driver_rtc/src/: lib.rs
modules/driver_rtl8139/: Cargo.toml
modules/driver_rtl8139/src/: dma.rs  irq_handler.rs  lib.rs  rtl8139.rs
modules/examplebin/: Cargo.toml
modules/examplebin/src/: lib.rs
modules/init/: Cargo.toml
modules/test_driver/: Cargo.toml
modules/test_driver/src/: lib.rs
src/: cpuid.rs  entry.asm  entry2_test.asm  initrd.rs  kernel_shell.rs  lib.rs  main.rs  main_old.rs  random.rs  rust_os.rs  signature.rs  syslog.rs  time.rs
src/acpi/: rsdt.rs  xsdt.rs
src/asm_misc/: process_common.asm  smp_ap_startup.asm
src/asm_routines/: constants.asm  debug.asm  interrupt.asm
src/ata_pio/: mod.rs
src/boot/: alt0.asm  boot.asm  boot_stage0.asm  boot_stage1.asm  boot_stage2.asm  stage0.asm  stage1.asm  stage2.asm
src/cpuid/: mod.rs
src/disk_io/: ata_pio.rs  mod.rs  virtio.rs
src/driver/: mod.rs  pic.rs  pit.rs  tsc.rs  uart.rs  vga_buffer.rs
src/elf_parser/: mod.rs
src/filesystem/: error.rs  file.rs  mod.rs  node.rs  path.rs  result.rs  special_files.rs  staticfs.rs  tree.rs
src/interrupt/: gdt.rs  handler.rs  idt.rs  macros.rs  mod.rs  tss.rs
src/ipc/: event_queue.rs  list.rs  mod.rs  result.rs  topic.rs
src/kernel_shell/: mod.rs
src/keyboard/: event.rs  key.rs  keymap.rs  keyreader.rs  mod.rs
src/mem_map/: mod.rs
src/memory/: area.rs  constants.rs  dma_allocator.rs  frame_allocator.rs  map.rs  mod.rs  mod_other.rs  prelude.rs  process_common_code.rs  rust_heap.rs  stack_allocator.rs  utils.rs  virtual_allocator.rs
src/multitasking/: elf_loader.rs  event_queue.rs  fd_wait_flag.rs  loader.rs  mod.rs  process.rs  process_manager.rs  queues.rs  scheduler.rs  waitfor.rs
src/nic/: mod.rs  ne2000.rs  virtio.rs
src/paging/: entry.rs  mapper.rs  mod.rs  page.rs  page_table.rs  table.rs  tlb.rs
src/pci/: mod.rs  scan.rs  util.rs
src/pic/: mod.rs
src/pit/: mod.rs
src/process_loader/: mod.rs
src/services/: initrd.rs  mod.rs
src/smp/: command.rs  data.rs  mod.rs  sleep.rs
tools/: bochs_debug_sourcelines.py  hex2str.py  image.py  logparser.py  pseudo_elf_loader.py  setbyte.py  stack.py  str2hex.py  zeropad.py
(+94 files in other folders)
