[package]
name = "d7os"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
publish = false
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
rlibc = "*"                     # Raw libc
spin = "0.5"                    # Spinlocks
bitflags = "1.2"                # Bitflags
bit_field = "0.10.0"            # Bit fields
volatile = "0.2.6"              # Volatile read and write functions
static_assertions = "1.1"       # Compile time assertions
pinecone = "0.2"                # Message format for process IO
log = "0.4"                     # Logging macros

acpi = "4.1.0"

# https://github.com/rust-osdev/acpi/pull/114
aml = {git = "https://github.com/Dentosal/acpi", branch="pci-route-method"}
# aml = "0.16.0"

[dependencies.cpuio]            # Cpu port IO
git = "https://github.com/Dentosal/cpuio-rs"

[dependencies.hashbrown]        # HashMap for no_std contexts
version = "0.7"
features = ["nightly", "inline-more", "serde"]

[dependencies.serde]            # Serde
version = "1.0"
default-features = false
features = ["alloc", "derive"]

[dependencies.serde_json]       # JSON support
version = "1.0"
default-features = false
features = ["alloc"]

[dependencies.sha2]
version = "0.10"
default-features = false
features = ["force-soft"]

[dependencies.lazy_static]      # Non-const_fn static intialization
version = "1.4"
features = ["spin_no_std"]

[dependencies.x86_64]           # x86-64 instructions and data structures
git = "https://github.com/Dentosal/x86_64"
features = ["use-serde"]

[dependencies.d7abi]
version = "*"
path = "libs/d7abi"

[dependencies.d7alloc]
version = "*"
path = "libs/d7alloc"

[dependencies.d7initrd]
version = "*"
path = "libs/d7initrd"

[dependencies.d7time]
version = "*"
path = "libs/d7time"
