[package]
name = "d7abi"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
publish = false
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.num_enum]
version = "0.4.2"
default_features = false

[dependencies.x86_64]
git = "https://github.com/Dentosal/x86_64"
