[package]
name = "d7abi"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
publish = false
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
serde-big-array = "0.2.0"       # Big array support for serde
bitflags = "1.3"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]

[dependencies.hashbrown]
version = "0.11"
features = ["nightly", "inline-more", "serde"]

[dependencies.num_enum]
git = "https://github.com/Dentosal/num_enum_simplified"

[dependencies.x86_64]
git = "https://github.com/Dentosal/x86_64"
features = ["use-serde"]
