[package]
name = "d7boot"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
publish = false
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.cpuio]            # Cpu port IO
git = "https://github.com/Dentosal/cpuio-rs"
