[package]
name = "d7elfpack"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
edition = "2018"

default-run = "d7elfpack"

[[bin]]
name = "d7elfpack"
required-features = ["use-std"]

[[bin]]
name = "test_decompress"
required-features = ["use-std"]

[dependencies]
num-traits = "0.2"
bit-vec = "0.6"
rayon = { version = "1.0", optional = true }

[dependencies.huffman-compress]
git = "https://github.com/Dentosal/rust-huffman-compress.git"

[features]
use-std = ["rayon"]
default = ["use-std"]