[package]
name = "d7initrd"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
edition = "2018"

[dependencies]
static_assertions = "1.1"       # Compile time assertions
pinecone = "0.2"                # Encoding format

[dependencies.serde]            # Serde
version = "1.0"
default-features = false
features = ["alloc", "derive"]