[package]
name = "d7keymap"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
publish = false
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.hashbrown]        # HashMap for no_std contexts
version = "0.11"
features = ["nightly", "inline-more", "serde"]

[dependencies.serde]            # Serde
version = "1.0"
default-features = false
features = ["alloc", "derive"]

[dependencies.serde_json]       # JSON support
version = "1.0"
default-features = false
features = ["alloc"]