[package]
name = "d7net"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.3"
log = "0.4"

[dependencies.hashbrown]        # HashMap for no_std contexts
version = "0.11"
features = ["nightly", "inline-more", "serde"]

[dependencies.serde]            # Serde
version = "1.0"
default-features = false
features = ["alloc", "derive"]

[dependencies.num_enum]
git = "https://github.com/Dentosal/num_enum_simplified"

[dependencies.tcpstate]
git = "https://github.com/Dentosal/tcpstate"

[dev-dependencies]
env_logger = "0.9.0"