[package]
name = "d7_daemon_fatfs"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
publish = false
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
log = "0.4"
spin = "0.9"
bitflags = "1.3"
lru = "0.7.2"

[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs"
rev = "87fc1ed5074a32b4e0344fcdde77359ef9e75432"
default-features = false
features = ["alloc", "lfn", "unicode", "log_level_trace"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]

[dependencies.libd7]
version = "*"
path = "../../libs/libd7"
