[package]
name = "d7_daemon_net"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
publish = false
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.hashbrown]
version = "0.7"
features = ["nightly", "inline-more", "serde"]

[dependencies.spin]
version = "0.9"
features = ["rwlock"]

[dependencies.libd7]
version = "*"
path = "../../libs/libd7"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["alloc"]
