[package]
name = "d7_daemon_syslog"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
publish = false
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
unicode-segmentation = "1.6.0"

[dependencies.hashbrown]
version = "0.7"
features = ["nightly", "inline-more", "serde"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["alloc"]

[dependencies.libd7]
version = "*"
path = "../../libs/libd7"
