[package]
name = "d7_daemon_syslog"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
publish = false
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
log = "0.4"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]

[dependencies.libd7]
version = "*"
path = "../../libs/libd7"
