[package]
name = "d7_test_driver"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
publish = false
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
spin = "0.5"

[dependencies.d7abi]
version = "*"
path = "../../libs/d7abi"